# firechannel

./: Cargo.toml
src/: fire.rs  main.rs  temp.rs
