[package]
name = "firechannel"
authors = ["Artur Gwoździowski"]
description = "webrtc with firebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.4.0"
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
clap = "3.0.8"
hyper = { version = "0.14.16", features = ["full"] }
signal = {path = "signal" }
tokio-util = "0.7.3"
anyhow = "1.0.52"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
firebase-rs = "2.0.1"
